made profile div

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
@@ -17,12 +17,14 @@
 <body>
   <main>
     <div class="profile">
-      <div>
-        <img src="images/image-jeremy.png" alt="jeremy's face"><span>Report for Jeremy Robson</span>
+      <div class="blue">
+        <img src="images/image-jeremy.png" alt="jeremy's face" class="face"><span>Report for <h3>Jeremy Robson</h3></span>
       </div>
-      <button class="dialy">Daily</button>
-      <button class="weekly">Weekly</button>
-      <button class="monthly">Monthly</button>
+      <div class="buttons">
+        <button class="daily">Daily</button>
+        <button class="weekly">Weekly</button>
+        <button class="monthly">Monthly</button>
+      </div>
     </div>
     
   
