--- a/index.html
+++ b/index.html
@@ -32,102 +32,114 @@
     <div class="card-container">
       <div class="card-1">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Work<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Work</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            5hrs <!-- daily -->
-            Previous - 7hrs <!-- daily -->
-            32hrs <!-- weekly -->
-            Previous - 36hrs <!-- weekly -->
-            103hrs <!-- monthly -->
-            Previous - 128hrs <!-- monthly -->
+            <span class="time">5hrs</span>
+            <span>Previous - 7hrs </span>
+            <!--32hrs 
+            Previous - 36hrs 
+            103hrs 
+            Previous - 128hrs -->
           </div>
         </div>  
       </div>
 
       <div class="card-2">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Play<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Play</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            1hr <!-- daily -->
-            Previous - 2hrs <!-- daily -->
-            10hrs <!-- weekly -->
-            Previous - 8hrs <!-- weekly -->
-            23hrs <!-- monthly -->
-            Previous - 29hrs <!-- monthly -->
+            <span class="time">1hr</span>
+            <span>Previous - 2hrs </span>
+            <!--10hrs 
+            Previous - 8hrs 
+            23hrs 
+            Previous - 29hrs --> 
           </div>
         </div>  
       </div>
 
-      <div class="card-2">
+      <div class="card-3">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Study<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Study</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            0hrs <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            4hrs <!-- weekly -->
-            Previous - 7hrs <!-- weekly -->
-            13hrs <!-- monthly -->
-            Previous - 19hrs <!-- monthly -->
+            <span class="time">0hrs</span>
+            <span>Previous - 1hr </span>
+            <!--4hrs 
+            Previous - 7hrs 
+            13hrs 
+            Previous - 19hrs  -->
           </div>
         </div>  
       </div>
 
-      <div class="card-2">
+      <div class="card-4">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Exercise<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Exercise</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            1hr <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            4hrs <!-- weekly -->
-            Previous - 5hrs <!-- weekly -->
-            11hrs <!-- monthly -->
-            Previous - 18hrs <!-- monthly -->
+            <span class="time">1hr</span>
+            <span>Previous - 1hr  </span>
+            <!--4hrs 
+            Previous - 5hrs 
+            11hrs 
+            Previous - 18hrs  -->
           </div>
         </div>  
       </div>
 
-      <div class="card-2">
+      <div class="card-5">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Social<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Social</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            1hr <!-- daily -->
-            Previous - 3hrs <!-- daily -->
-            5hrs <!-- weekly -->
-            Previous - 10hrs <!-- weekly -->
-            21hrs <!-- monthly -->
-            Previous - 23hrs <!-- monthly -->
+            <span class="time">1hr </span>
+            <span>Previous - 3hrs </span>
+            <!--5hrs 
+            Previous - 10hrs 
+            21hrs 
+            Previous - 23hrs -->  
           </div>
         </div>  
       </div>
 
-      <div class="card-2">
+      <div class="card-6">
         <div class="card-icon">
-          <img src="" alt="">
         </div>
         <div class="card-text">
-          <div class="card-title">Self Care<img src="images/icon-ellipsis.svg" alt=""></div>
+          <div class="card-title">
+            <h3>Self Care</h3>
+            <img src="images/icon-ellipsis.svg" alt="3-dot" class="dot">
+          </div>
           <div class="card-time">
-            0hrs <!-- daily -->
-            Previous - 1hr <!-- daily -->
-            2hrs <!-- weekly -->
-            Previous - 2hrs <!-- weekly -->
-            7hrs <!-- monthly -->
-            Previous - 11hrs <!-- monthly -->
+            <span class="time">0hrs</span>
+            <span>Previous - 1hr </span>
+            <!--2hrs 
+            Previous - 2hrs 
+            7hrs 
+            Previous - 11hrs  -->
           </div>
         </div>  
       </div>
